# Modules/OrdenesServicio/Domain/Contracts/OrdenServicioRepositoryInterface.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace Modules\OrdenesServicio\Domain\Contracts;
+
+interface OrdenServicioRepositoryInterface
+{
+    public function listar();
+    public function crear(array $data);
+}
