# Modules/OrdenesServicio/Routes/api.php
@@ -1,0 +1,9 @@
+<?php
+
+use Illuminate\Support\Facades\Route;
+use Modules\OrdenesServicio\Infrastructure\Http\Controllers\OrdenServicioController;
+
+Route::prefix('v1/ordenes-servicio')->middleware('auth:api')->group(function () {
+    Route::get('/', [OrdenServicioController::class, 'index']);
+    Route::post('/', [OrdenServicioController::class, 'store']);
+});
